# todo

./: .env  alembic.ini
alembic/versions/: 2cd3df0ae252_create_tasks_table.py
app/: main.py
app/core/: db.py  logging.py
app/domains/tasks/: router.py  schemas.py  service.py
backend/: pyproject.toml
backend/app/: main.py
backend/app/core/: error_handlers.py  exceptions.py  settings.py
backend/app/domains/tasks/: models.py  repository.py
backend/app/shared/: exceptions.py
backend/tests/system/: test_openapi_and_health.py
backend/tests/unit/: test_tasks_schemas.py
frontend/: .env
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  tasks.ts
frontend/src/components/: TaskForm.tsx  TaskItem.tsx
frontend/src/pages/: TaskDetail.tsx  TaskList.tsx
frontend/src/types/: task.ts
tests/: conftest.py
tests/integration/: test_errors.py  test_tasks_api.py
tests/unit/: test_tasks_service.py
